--- a/app/views/account/notifications/details.njk
+++ b/app/views/account/notifications/details.njk
@@ -46,6 +46,7 @@
 
         <dl class="govuk-summary-list">
           {% for notification in notificationOptions %}
+            {% if organisation.type in notification.providerTypes %}
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 {{ notification.name }}
@@ -59,6 +60,7 @@
                 </a>
               </dd> -->
             </div>
+            {% endif %}
           {% endfor %}
         </dl>
 
