Separate notifications types

--- a/app/views/account/notifications/edit.njk
+++ b/app/views/account/notifications/edit.njk
@@ -32,35 +32,81 @@
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
+        {% if organisation.type in ["hei","scitt"] %}
+
+            <h2 class="govuk-heading-m">Courses run by my organisation</h2>
+
+        {% endif %}
+
         {% for notification in notificationOptions %}
-          {{ govukRadios({
-            idPrefix: "notifications",
-            name: "notifications[" + notification.code + "]",
-            fieldset: {
-              legend: {
-                text: notification.name,
-                isPageHeading: false,
-                classes: "govuk-fieldset__legend--m"
-              }
-            },
-            items: [
-              {
-                value: "on",
-                text: "On",
-                checked: true if (notifications and notification.code in notifications) else false
+          {% if notification.providerTypes.length == 3 and organisation.type in notification.providerTypes %}
+            {{ govukRadios({
+              idPrefix: "notifications",
+              name: "notifications[" + notification.code + "]",
+              fieldset: {
+                legend: {
+                  text: notification.name,
+                  isPageHeading: false,
+                  classes: "govuk-fieldset__legend--m" if organisation.type == "lead_school" else "govuk-fieldset__legend--s"
+                }
               },
-              {
-                value: "off",
-                text: "Off",
-                checked: true if (notifications and notification.code not in notifications) else false
-              }
-            ],
-            hint: {
-              text: notification.hint
-            } if notification.hint,
-            classes: "govuk-radios--inline"
-          }) }}
+              items: [
+                {
+                  value: "on",
+                  text: "On",
+                  checked: true if (notifications and notification.code in notifications) else false
+                },
+                {
+                  value: "off",
+                  text: "Off",
+                  checked: true if (notifications and notification.code not in notifications) else false
+                }
+              ],
+              hint: {
+                text: notification.hint
+              } if notification.hint,
+              classes: "govuk-radios--inline"
+            }) }}
+          {% endif %}
         {% endfor %}
+
+        {% if organisation.type in ["hei","scitt"] %}
+
+          <h2 class="govuk-heading-m">Courses run by partner organisations</h2>
+
+          {% for notification in notificationOptions %}
+            {% if notification.providerTypes.length == 2 and organisation.type in notification.providerTypes %}
+              {{ govukRadios({
+                idPrefix: "notifications",
+                name: "notifications[" + notification.code + "]",
+                fieldset: {
+                  legend: {
+                    text: notification.name,
+                    isPageHeading: false,
+                    classes: "govuk-fieldset__legend--s"
+                  }
+                },
+                items: [
+                  {
+                    value: "on",
+                    text: "On",
+                    checked: true if (notifications and notification.code in notifications) else false
+                  },
+                  {
+                    value: "off",
+                    text: "Off",
+                    checked: true if (notifications and notification.code not in notifications) else false
+                  }
+                ],
+                hint: {
+                  text: notification.hint
+                } if notification.hint,
+                classes: "govuk-radios--inline"
+              }) }}
+            {% endif %}
+          {% endfor %}
+
+        {% endif %}
 
         {{ govukButton({
           text: "Update email notifications"
