--- a/app/views/_layout-auth.njk
+++ b/app/views/_layout-auth.njk
@@ -48,7 +48,7 @@
 
   {{ govukPhaseBanner({
     tag: {
-      text: environment if environment != 'production' else 'beta',
+      text: phaseTagText,
       classes: "app-tag--prototype" if environment != 'production'
     },
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.',
