--- a/app/views/locations/detail.njk
+++ b/app/views/locations/detail.njk
@@ -1,5 +1,7 @@
 {% extends "_layout.njk" %}
 
+{% set primaryNavId = "locations" %}
+
 {% if location %}
   {% set title = location.name %}
 {% else %}
@@ -22,12 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l">
-          {{ caption }}
-        </span>
-        {{ title }}
-      </h1>
+      {% include "_includes/page-heading.njk" %}
 
       {% set addressHtml %}
         <p class="govuk-body">
