--- a/app/views/courses/school-placements.njk
+++ b/app/views/courses/school-placements.njk
@@ -22,12 +22,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       {% set headingHtml %}
-        <h1 class="govuk-heading-l">
-          <span class="govuk-caption-l">
-            {{ caption }}
-          </span>
-          {{ title }}
-        </h1>
+        {% include "_includes/page-heading.njk" %}
       {% endset %}
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
