--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -1,13 +1,12 @@
 {% extends "_layout.njk" %}
 
+{% set primaryNavId = "courses" %}
+
 {% set title = "Courses" %}
-{% set caption = organisation.name %}
+{#% set caption = organisation.name %#}
 
 {% block beforeContent %}
-{{ govukBackLink({
-  text: "Back",
-  href: actions.back
-}) }}
+
 {% endblock %}
 
 {% block content %}
@@ -17,12 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l">
-          {{ caption }}
-        </span>
-        {{ title }}
-      </h1>
+      {% include "_includes/page-heading.njk" %}
 
       {% if organisation.type == "lead_school" %}
 
