--- a/app/views/account/notifications/edit.njk
+++ b/app/views/account/notifications/edit.njk
@@ -2,6 +2,8 @@
 
 {% set headerNavId = "account" %}
 
+{% set hideNavigation = true %}
+
 {% set title = "Your email notifications" %}
 {% set caption = "Update your email notifications" %}
 {% if user.organisations.length > 1 %}
