Update hide primary navigation variable

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -81,7 +81,7 @@
     classes: "govuk-width-container"
   }) }}
 
-  {% if not hideNavigation %}
+  {% if not hidePrimaryNavigation %}
     {{ appPrimaryNavigation({
       items: [
         {
