--- a/app/views/account/notifications/details.njk
+++ b/app/views/account/notifications/details.njk
@@ -2,7 +2,7 @@
 
 {% set headerNavId = "account" %}
 
-{% set hideNavigation = true %}
+{% set hidePrimaryNavigation = true %}
 
 {% set title = "Your email notifications" %}
 {#% set caption = user.firstName + " " + user.lastName %#}
