--- a/app/views/account/index.njk
+++ b/app/views/account/index.njk
@@ -2,7 +2,7 @@
 
 {% set headerNavId = "account" %}
 
-{% set hideNavigation = true %}
+{% set hidePrimaryNavigation = true %}
 
 {% set title = "Your account" %}
 {#% set caption = user.firstName + " " + user.lastName %#}
