--- a/app/views/account/notifications/edit.njk
+++ b/app/views/account/notifications/edit.njk
@@ -2,7 +2,7 @@
 
 {% set headerNavId = "account" %}
 
-{% set hideNavigation = true %}
+{% set hidePrimaryNavigation = true %}
 
 {% set title = "Your email notifications" %}
 {% set caption = "Update your email notifications" %}
