--- a/app/views/organisations/list.njk
+++ b/app/views/organisations/list.njk
@@ -1,6 +1,6 @@
 {% extends "_layout.njk" %}
 
-{% set hideNavigation = true %}
+{% set hidePrimaryNavigation = true %}
 
 {% set title = "Organisations"  %}
 {% set caption = ""  %}
