--- a/app/views/_components/all.scss
+++ b/app/views/_components/all.scss
@@ -4,6 +4,7 @@
 @import "button-menu/button-menu";
 @import "filter/filter";
 @import "metric/metric";
+@import "organisation-switcher/organisation-switcher";
 @import "page-header-actions/page-header-actions";
 @import "pagination/pagination";
 @import "primary-navigation/primary-navigation";
