Hide organisation switcher on organisation list screen

--- a/app/views/organisations/list.njk
+++ b/app/views/organisations/list.njk
@@ -1,6 +1,7 @@
 {% extends "_layout.njk" %}
 
 {% set hidePrimaryNavigation = true %}
+{% set hideOrganisationSwitcher = true %}
 
 {% set title = "Organisations"  %}
 {% set caption = ""  %}
