Update organisation details menu item

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -115,7 +115,7 @@
         },
         {
           href: baseUrl + "/details",
-          text: "Organisation settings",
+          text: "Organisation details",
           active: primaryNavId == "settings"
         }
       ]
