Hide organisation switcher in user account section

--- a/app/views/account/index.njk
+++ b/app/views/account/index.njk
@@ -3,6 +3,7 @@
 {% set headerNavId = "account" %}
 
 {% set hidePrimaryNavigation = true %}
+{% set hideOrganisationSwitcher = true %}
 
 {% set title = "Your account" %}
 {#% set caption = user.firstName + " " + user.lastName %#}
