--- a/app/views/account/notifications/edit.njk
+++ b/app/views/account/notifications/edit.njk
@@ -3,6 +3,7 @@
 {% set headerNavId = "account" %}
 
 {% set hidePrimaryNavigation = true %}
+{% set hideOrganisationSwitcher = true %}
 
 {% set title = "Your email notifications" %}
 {% set caption = "Update your email notifications" %}
