--- a/app/views/account/personal-details/details.njk
+++ b/app/views/account/personal-details/details.njk
@@ -3,6 +3,7 @@
 {% set headerNavId = "account" %}
 
 {% set hidePrimaryNavigation = true %}
+{% set hideOrganisationSwitcher = true %}
 
 {% set title = "Your personal details" %}
 {#% set caption = user.firstName + " " + user.lastName %#}
