--- a/app/views/organisations/list.njk
+++ b/app/views/organisations/list.njk
@@ -1,10 +1,12 @@
 {% extends "_layout.njk" %}
 
+{% set primaryNavId = "settings" %}
+
 {% set hidePrimaryNavigation = true %}
 {% set hideOrganisationSwitcher = true %}
 
 {% set title = "Organisations"  %}
-{% set caption = ""  %}
+{#% set caption = ""  %#}
 
 {% block beforeContent %}
 
@@ -14,14 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l">
-        {% if caption.length %}
-          <span class="govuk-caption-l">
-            {{ caption }}
-          </span>
-        {% endif %}
-        {{ title }}
-      </h1>
+      {% include "_includes/page-heading.njk" %}
 
       <ul class="govuk-list govuk-list--spaced">
         {% for organisation in organisations %}
