--- a/app/views/_components/primary-navigation/template.njk
+++ b/app/views/_components/primary-navigation/template.njk
@@ -11,11 +11,13 @@
         <ul class="app-primary-navigation__list">
 
           {%- for item in params.items %}
-            <li class="app-primary-navigation__item {{- ' ' + item.classes if item.classes }}">
-              <a class="app-primary-navigation__link" {{ 'aria-current="page"' | safe if item.active }} href="{{ item.href }}" {%- for attribute, value in item.attributes -%} {{ attribute }}="{{ value }}"{% endfor %}>
-                {{- item.html | safe if item.html else item.text -}}
-              </a>
-            </li>
+            {% if item.html.length or item.text.length %}
+              <li class="app-primary-navigation__item {{- ' ' + item.classes if item.classes }}">
+                <a class="app-primary-navigation__link" {{ 'aria-current="page"' | safe if item.active }} href="{{ item.href }}" {%- for attribute, value in item.attributes -%} {{ attribute }}="{{ value }}"{% endfor %}>
+                  {{- item.html | safe if item.html else item.text -}}
+                </a>
+              </li>
+            {% endif %}
           {% endfor -%}
 
         </ul>
