Put organisation into the passport object

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -117,7 +117,7 @@
           href: "#",
           text: "Training providers",
           active: primaryNavId == "partners"
-        } if organisation.type in ["hei","scitt"],
+        } if passport.organisation.type in ["hei","scitt"],
         {
           href: baseUrl + "/details",
           text: "Organisation details",
