Remove phase banner bottom border if single org user

--- a/app/assets/sass/utilities/_overrides.scss
+++ b/app/assets/sass/utilities/_overrides.scss
@@ -5,3 +5,7 @@
 .govuk-header {
   border-bottom: 10px solid $govuk-brand-colour;
 }
+
+.govuk-phase-banner--no-border-bottom {
+  border-bottom: 0;
+}
