--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -79,7 +79,7 @@
       classes: "app-tag--prototype" if environment != 'production'
     },
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.',
-    classes: "govuk-width-container"
+    classes: "govuk-width-container" + (" govuk-phase-banner--no-border-bottom" if passport.user.organisations.length == 1)
   }) }}
 
   {% if passport.user.organisations.length > 1 %}
