Add footer to layout

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -96,14 +96,7 @@
 
 {% if useAutoStoreData %}
   {% block footer %}
-    {{ govukFooter({
-      meta: {
-        items: [{
-          href: "/prototype-admin/clear-data",
-          text: "Clear data"
-        }]
-      }
-    }) }}
+    {% include "_includes/footer.njk" %}
   {% endblock %}
 {% endif %}
 
