--- a/app/views/_layout-auth.njk
+++ b/app/views/_layout-auth.njk
@@ -67,14 +67,7 @@
 
 {% if useAutoStoreData %}
   {% block footer %}
-    {{ govukFooter({
-      meta: {
-        items: [{
-          href: "/prototype-admin/clear-data",
-          text: "Clear data"
-        }]
-      }
-    }) }}
+    {% include "_includes/footer.njk" %}
   {% endblock %}
 {% endif %}
 
