Add footer component

--- a/app/views/_components/all.scss
+++ b/app/views/_components/all.scss
@@ -3,6 +3,7 @@
 @import "banner/banner";
 @import "button-menu/button-menu";
 @import "filter/filter";
+@import "footer/footer";
 @import "metric/metric";
 @import "page-header-actions/page-header-actions";
 @import "pagination/pagination";
